# HealthFocus.github.io

./: .gitignore  .pre-commit-config.yaml  CNAME  README.md  accessibility-policy.html  archives.html  authors.html  categories.html  index.html  pelicanconf.py  privacy-policy.html  publishconf.py  pyproject.toml  security-policy.html  tags.html
content/pages/: accessibility-policy.md  privacy-policy.md  security-policy.md
feeds/: all.atom.xml
output/: archives.html  authors.html  categories.html  index.html  tags.html
output/privacy-policy/: index.html
privacy-policy/: index.html
theme/css/: style.css
themes/healthfocus/static/css/: style.css
themes/healthfocus/templates/: base.html  index.html  page.html
