[tool.poetry]
name = "healthfocus.io"
version = "0.1.0"
description = "Website for HF Software Solutions, Inc"
authors = ["Michael Wilson <wilson@healthfocus.io>"]
exclude = ["**/*"]
classifiers = [
    "Private :: Do not Upload",
]

[tool.poetry.dependencies]
python = "^3.9"
pelican = {extras = ["markdown"], version = "^4.7.0"}
black = "^24.3"
pre-commit = "^2.15.0"
ghp-import = "^2.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
